fix the destop alignment styles

--- a/main.css
+++ b/main.css
@@ -6,23 +6,22 @@
 
 header {
   background-color: #152d32;
-  padding: 0px 18%;
+  padding: 0px 20%;
 }
 
 .header-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  /* max-width: 1200px; */
-  /* margin: 0 auto; */
   padding: 30px 0px;
 }
 .header-content {
   display: flex;
   flex-direction: row;
   gap: 30px;
-  font-weight: 500;
+  font-weight: 400;
   color: white;
+  font-size: 14px;
 }
 .icons {
   display: flex;
@@ -31,14 +30,13 @@ header {
   color: white;
 }
 .furniture-text {
-  font-weight: 600;
+  font-weight: 700;
   color: white;
+  font-size: 17px;
 }
 .sub-container {
   display: flex;
   flex-direction: column;
-  /* justify-content: center; */
-  /* align-items: center; */
   padding-bottom: 20px;
 }
 .dreamText {
@@ -49,7 +47,7 @@ h1 {
   text-align: center;
   text-transform: capitalize;
   text-align: justify;
-  font-size: 80px;
+  font-size: 70px;
   font-weight: 800;
   line-height: 1;
   padding-top: 80px;
@@ -57,25 +55,25 @@ h1 {
 .ptext {
   color: white;
   text-transform: capitalize;
-  font-size: 16px;
+  font-size: 14px;
 }
 .fa-solid {
   color: white;
   border: 1px solid white;
   padding: 8px;
+  align-self: center;
   border-radius: 50%;
 }
 .subTextContainer {
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: 40%;
+  gap: 46%;
   padding-top: 10px;
-  /* flex-wrap: wrap; */
 }
-.image {
+.bgimage {
   width: 100%;
-  height: 1%;
+  height: 85vh;
 }
 .iframes-container-1 {
   padding: 0px 18%;
@@ -85,17 +83,35 @@ h1 {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  gap: 42px;
+  gap: 30px;
   padding-top: 50px;
   padding-bottom: 20px;
+}
+.frame_heading {
+  font-weight: 500px;
+  font-size: 21px;
+  color: #091416;
+}
+.frame_para {
+  font-weight: 400px;
+  font-size: 12px;
+  color: #a1abad;
+}
+.focus_container {
+  background-color: #152d32;
+  padding: 10px;
 }
 .frames_images2 {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  gap: 85px;
+  padding: 85px 0px;
+}
+.icon-image {
   padding-top: 20px;
-  padding: 80px 0px;
+  padding-bottom: 20px;
 }
 .arrow-outward-container {
   display: flex;
@@ -150,17 +166,18 @@ h1 {
   display: flex;
   flex-direction: row;
   gap: 32rem;
+  align-items: center;
 }
 .popular-text-2 {
   text-transform: capitalize;
-  font-size: 48px;
+  font-size: 42px;
   font-weight: 600;
   line-height: 65px;
   color: #091416;
 }
 .ptext-2 {
   font-weight: 400;
-  font-size: 14px;
+  font-size: 12px;
   line-height: 24px;
   color: #a1abad;
 }
@@ -173,10 +190,11 @@ h1 {
   flex-direction: row;
   justify-content: space-between;
   gap: 28rem;
-  margin-top: 20px;
+  margin-top: 10px;
 }
 .best-furniture {
-  font-weight: 700;
+  font-weight: 400;
+  font-size: 21px;
 }
 .groups-images {
   display: flex;
@@ -195,11 +213,11 @@ h1 {
   justify-content: center;
   align-items: center;
   gap: 40px;
-  padding: 70px 18%;
+  padding: 75px 18%;
 }
 .about-us {
   font-weight: 400;
-  font-size: 24px;
+  font-size: 21px;
   line-height: 100%;
   letter-spacing: 0%;
   color: #091416;
@@ -207,7 +225,7 @@ h1 {
 }
 .about-us-text {
   font-weight: 600;
-  font-size: 48px;
+  font-size: 42px;
   line-height: 65px;
   text-transform: capitalize;
   letter-spacing: 0%;
@@ -215,13 +233,13 @@ h1 {
 }
 .rating-num {
   font-weight: 600;
-  font-size: 64px;
+  font-size: 56px;
   line-height: 65px;
   letter-spacing: 0%;
 }
 .brand {
   font-weight: 400;
-  font-size: 14px;
+  font-size: 12px;
   line-height: 24px;
   color: #a1abad;
 }
@@ -250,7 +268,6 @@ h1 {
 }
 .blog-container {
   background-color: #f8f9f9;
-  /* padding: 60px 0px; */
   width: 100%;
   padding: 4% 18%;
   margin-bottom: 8%;
@@ -265,8 +282,11 @@ h1 {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 30px;
+  gap: 22px;
   margin-top: 40px;
+}
+.blog-img {
+  width: 36vh;
 }
 .footer-container {
   background-color: #081315;
@@ -276,7 +296,7 @@ h1 {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding: 0px 18%;
+  padding: 0px 21%;
 }
 .footer-sub-container-2 {
   display: flex;
@@ -299,7 +319,7 @@ h1 {
   color: #ffffff;
   font-size: 14px;
   font-weight: 400;
-  padding: 0px 19%;
+  padding: 0px 21%;
   margin-top: 90px;
 }
 .footer-sub-title {
